<resources>

    <!-- General -->
    <string name="app_name">TBM APPS</string>
    <string name="app_company">imobilenet-id</string>
    <string name="menu_logut">Keluar App</string>
    <string name="menu_about">Tentang Tbm</string>
    <string name="menu_profile">Data pengguna</string>
    <string name="menu_settings">Pengaturan</string>
    <string name="menu_search">Pencarian</string>
    <string name="heading_location">Lokasi Pengguna</string>
    <string name="heading_post">Laporan Kecelakaan</string>
    <string name="heading_chat">Kontak Dokter</string>
    <string name="heading_settings">Pengaturan</string>
    <string name="search_my_location">search my location</string>
    <string name="search_local_hospital">search local hospital</string>
    <string name="TBM_Marker">TBM FK UISU Medan</string>

    <!-- Ui related-->
    <string name="str_Current_location">Lokasi sekarang…</string>
    <string name="str_Short_story">Berita singkat</string>
    <string name="str_Call_for_help">Panggil Bantuan</string>
    <string name="str_No_Geocoder_available">No Geocoder available</string>
    <string name="str_Connection_suspended">Connection suspended</string>
    <string name="str_Connection_failed">Connection failed: ConnectionResult.getErrorCode() = </string>
    <string name="str_Posting">Posting…</string>
    <string name="str_Update_profile">Ubah data diri…</string>
    <string name="str_Service_is_not_available">Service is not available…</string>
    <string name="str_Invalid_latitude_or_longitude_values">Invalid latitude or longitude values…</string>
    <string name="str_No_addresses_found">No addresses found…</string>
    <string name="str_Address_found">Address found…</string>
    <string name="str_Loading">Loading…</string>
    <string name="str_version">version</string>
    <string name="str_Sign_In_failed">Sign-In failed</string>
    <string name="str_Sign_Up_failed">Sign-Up failed</string>
    <string name="str_Call_ambulance">Panggil ambulance</string>
    <string name="str_Accident_report">Lapor kecelakaan</string>
    <string name="str_Profile_update">Data pengguna</string>

    <!-- Preference values -->
    <string name="str_tbm_coordinate_location">Lokasi TBM Pusat</string>
    <string name="str_tbm_general_settings">Umum</string>
    <string name="str_latitude_coordinate">Koordinat latitude</string>
    <string name="str_default_latitude">3.580790</string>
    <string name="str_longitude_coordinate">Koordinat longitude</string>
    <string name="str_default_longitude">98.685101</string>
    <string name="str_map_type">Jenis peta</string>
    <string name="str_Modern">Modern</string>
    <string name="str_Retro">Klasik</string>
    <string name="str_tbm_emergency_contact">Nomor Kontak Darurat TBM</string>
    <string name="str_tbm_emergency_contact_default">+6582273979449</string>
    <string name="key_latitude">key_latitude</string>
    <string name="key_longitude">key_longitude</string>
    <string name="key_tbm_emergency_contact">key_tbm_emergency_contact</string>
    <string name="key_map_type">key_map_type</string>

</resources>
